# lab1

.github/workflows/: release.yml
lab1/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
